--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST="mysql-production-0d95.up.railway.app"
-DB_USER="root"
-DB_PASSWORD="vAhZbXHHuHjoAMWQMrItjGbJfWeBXOJU"
-DB_NAME="railway"
+DB_HOST="bwqzwcgaxns7lzoqz088-mysql.services.clever-cloud.com"
+DB_NAME="bwqzwcgaxns7lzoqz088"
+DB_PASSWORD="X1pJUa7a3HnkiZGVRY8b"
 DB_PORT="3306"
-JWT_SECRET="your_jwt_secret"
+DB_USER="unziidgg2ncs6kfz"
+PORT="3000"
